Fix spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,6 +3,10 @@
   font-family: Helvetica;
 }
 
+body {
+  margin: 20px;
+}
+
 h1 {
   margin-bottom: 15px;
   text-align: center;
